# cmake-multi-pkg

./: .gitignore  README.md
test/: CMakeLists.txt  test.cpp
top/: CMakeLists.txt
top/bar/: CMakeLists.txt  bar1.cpp  bar1.h  bar2.cpp  bar2.h
top/foo/: CMakeLists.txt  foo1.cpp  foo1.h  foo2.cpp  foo2.h  pkg.cmake.in
